Fix lyche reservation overlap bug and other improvements  (#780)
* Improvements to user experience in reservation form

* Mutual exclusion for find tables

* Fix class variable access and nil error

* Fix overlap bug, add closed period notice in form, multi table reservations have correct number of people

--- a/app/assets/stylesheets/sulten/lyche.scss
+++ b/app/assets/stylesheets/sulten/lyche.scss
@@ -825,16 +825,21 @@ body.lyche {
   }
 
   .reservation_no_available {
-    font-size: 20px;
-    font-weight: bold;
+    font-size: 18px;
     color: white;
     padding: 20px;
+    text-align: center;
   }
 
   .link-back-when-no-reservations {
     max-width: 600px;
     margin: 0 auto;
     color: yellow;
+    text-align: center;
+    padding-bottom: 2em;
+    a {
+      font-weight: bold;
+    }
   }
 
 
